# ztl_note

./: Cargo.toml  README.md
database/: schema.sql
src/: lib.rs  main.rs  ztln_session.rs
tests/: list_notes.rs
tests/test_init/: fake_data.rs  mod.rs
