[package]
name = "ztl_note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
elephantry = { version = "3.0", features = ["uuid"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
